--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>HI!. I'm PHEM-Dararaksmey. Web developer in CAMBODIA </p>
                 <br>
                 <div class="btn">
-                    <button>Download CV</button>
+                    <button>Download CV<a href="/PHEM Dararaksmey CV (1).pdf"></a></button>
                     <button>Contact me</button>
                 </div>
             </div>
