--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>HI!. I'm PHEM-Dararaksmey. Web developer in CAMBODIA </p>
                 <br>
                 <div class="btn">
-                    <a href="/PHEM Dararaksmey CV (1).pdf"><button>Download CV</button></a>
+                    <a href="/Resume.png"><button>Download CV</button></a>
                     <button>Contact me</button>
                 </div>
             </div>
